--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,52 @@ form {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   max-width: 600px;
   margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+form fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.btn-blue {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.w-fit {
+  width: fit-content;
+}
+
+legend,
+fieldset {
+  border: 1px lightgray solid;
+  border-radius: 5px;
+  padding: 0px 10px;
+}
+
+fieldset {
+  padding: 1rem;
+}
+
+input:not([type=color]),
+select,
+textarea {
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid lightgray;
 }
 
 /*# sourceMappingURL=styles.css.map */
